--- a/overlay/packages/services/Telephony/res/values/config.xml
+++ b/overlay/packages/services/Telephony/res/values/config.xml
@@ -23,4 +23,10 @@
 
     <!-- Show enabled lte option for lte device -->
     <bool name="config_enabled_lte" translatable="false">true</bool>
+     
+     <!-- Determines if the current device should allow emergency numbers to be logged in the
+     call log. Some carriers require that emergency calls *not* be logged, presumably to
+     avoid the risk of accidental redialing from the call log UI.
+     The default is false. -->
+    <bool name="allow_emergency_numbers_in_call_log">true</bool>
 </resources>
